--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -54,6 +54,7 @@ jobs:
         run: ./actionlint -format "$(cat .github/workflows/actionlint-format.txt)" > results.sarif
 
       - name: Upload to GitHub security events
+        if: success() || failure()
         # If there are security problems, GitHub will automatically comment on the PR for us.
         uses: github/codeql-action/upload-sarif@28deaeda66b76a05916b6923827895f2b14ab387 # v3.28.16
         with:
