ci: success() OR failure(), not AND

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,7 +36,7 @@ jobs:
           version: v2.0
 
       - name: go mod tidy
-        if: success() && failure()
+        if: success() || failure()
         run: |
           if ! go mod tidy -diff; then
             echo "go mod tidy failed. Please run 'go mod tidy' and commit the changes."
@@ -44,7 +44,7 @@ jobs:
           fi
 
       - name: sqlc generate
-        if: success() && failure()
+        if: success() || failure()
         run: |
           sqlc generate
           if ! git diff --exit-code pkg/db/{db,models,querier,queries.sql}.go; then
