--- a/.github/workflows/sample-jvm.yml
+++ b/.github/workflows/sample-jvm.yml
@@ -7,12 +7,14 @@ on:
     paths:
       - 'samples/java/**'
       - 'samples/kotlin/**'
+      - '.github/workflows/sample-jvm.yml'
   pull_request:
     branches:
       - main
     paths:
       - 'samples/java/**'
       - 'samples/kotlin/**'
+      - '.github/workflows/sample-jvm.yml'
   # It is unlikely that we will change this sample very often, hence we want to ensure it continues working.
   schedule:
     - cron: '0 2 5 * *' # every month on the 5th day at midnight 02:00 UTC
