--- a/.github/workflows/sample-cxx.yml
+++ b/.github/workflows/sample-cxx.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y python3 ninja-build meson gcc lcov
-          uv install gcovr
+          uv pip install gcovr --system
 
       - name: Build and test
         run: |
