--- a/.github/workflows/sample-go.yml
+++ b/.github/workflows/sample-go.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Build and test
         run: |
-          cd samples/go
+          cd samples/golang/
           go test -covermode=set -coverprofile=set.cov ./...
           go test -covermode=count -coverprofile=count.cov ./...
           go test -covermode=atomic -coverprofile=atomic.cov ./...
