--- a/.github/workflows/sample-cxx.yml
+++ b/.github/workflows/sample-cxx.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           cd "$DIR"
           meson setup build -Db_coverage=true
-          cd build && meson test
+          (cd build && meson test)
           ninja coverage-xml -C build # writes to build/meson-logs/coverage.xml
           ninja coverage-html -C build # writes to build/meson-logs/coverage.info
 
