--- a/.github/workflows/sample-cxx.yml
+++ b/.github/workflows/sample-cxx.yml
@@ -40,17 +40,24 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: Set up uv
+        uses: astral-sh/setup-uv@6b9c6063abd6010835644d4c2e1bef4cf5cd0fca # v6.0.1
+        with:
+          # Enable caching ONLY for PRs within the main repo. Forks do not get cache.
+          enable-cache: ${{ github.repository == github.event.pull_request.head.repo.full_name }}
+
       - name: Set up dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y python3 ninja-build meson gcc lcov gcovr
+          sudo apt-get install -y python3 ninja-build gcc lcov
+          uv pip install --user meson gcovr
 
       - name: Build and test
         run: |
           set -xeuo pipefail
           cd "$DIR"
-          meson setup build -Db_coverage=true
-          (cd build && meson test)
+          uvx meson setup build -Db_coverage=true
+          (cd build && uvx meson test)
           ninja coverage -C build # writes to build/meson-logs/coverage.{xml,info}
 
       - name: Ensure coverage reports exist
