--- a/.github/workflows/sample-cxx.yml
+++ b/.github/workflows/sample-cxx.yml
@@ -50,13 +50,13 @@ jobs:
           set -xeuo pipefail
           cd "$DIR"
           meson setup build -Db_coverage=true
-          cd build && meson test
+          cd build && meson test --verbose
 
       - name: Generate coverage reports
         run: |
           set -xeuo pipefail
           cd "$DIR"
-          ninja coverage -C build # writes to build/meson-logs/coverage.{xml,info}
+          ninja -v coverage -C build # writes to build/meson-logs/coverage.{xml,info}
 
       - name: Ensure coverage reports exist
         run: |
@@ -71,10 +71,3 @@ jobs:
             echo "Coverage report not found!"
             exit 1
           fi
-
-      - name: Print build.ninja
-        if: failure()
-        run: |
-          set -xeuo pipefail
-          cd "$DIR"
-          cat build/build.ninja
