--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -83,6 +83,31 @@ jobs:
             exit 1
           fi
 
+  go-generate:
+    name: go generate linter
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read # to check out the code
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        with:
+          persist-credentials: false
+
+      - name: Set up Go
+        uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b # v5
+        with:
+          go-version-file: go.mod
+
+      - name: go generate
+        run: |
+          go generate ./...
+          if ! git diff --exit-code; then
+            echo "go generate failed. Please run 'just generate' and commit the changes."
+            exit 1
+          fi
+
   test:
     name: Run all Go tests
     runs-on: ubuntu-latest
