--- a/.github/workflows/sample-jest.yml
+++ b/.github/workflows/sample-jest.yml
@@ -21,6 +21,10 @@ on:
 
 permissions: {}
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
+
 jobs:
   verify:
     name: Build and verify JavaScript sample
