--- a/pkg/api/obs/oapi-codegen.yaml
+++ b/pkg/api/obs/oapi-codegen.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/oapi-codegen/oapi-codegen/HEAD/configuration-schema.json
-package: health
+package: obs
 generate:
   gin-server: true
   models: true
