--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -7,19 +7,27 @@ on:
   schedule:
     - cron: '0 0 * * *' # every day at midnight UTC
 
-permissions:
-  security-events: write
+permissions: {}
 
 jobs:
   analyse:
-    name: Analyse
-    runs-on: ubuntu-latest
-
     strategy:
       fail-fast: false
       matrix:
-        # https://docs.github.com/en/code-security/code-scanning/creating-an-advanced-setup-for-code-scanning/customizing-your-advanced-setup-for-code-scanning#changing-the-languages-that-are-analyzed
-        language: ['actions', 'go']
+        include:
+          # https://docs.github.com/en/code-security/code-scanning/creating-an-advanced-setup-for-code-scanning/customizing-your-advanced-setup-for-code-scanning#changing-the-languages-that-are-analyzed
+          - language: actions
+            build-mode: none
+          - language: go
+            build-mode: autobuild
+
+    name: Analyse (${{ matrix.language }})
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read # clone repository
+      actions: read # read workflow files
+      security-events: write # upload SARIF report
+      packages: read # private codeql packs
 
     steps:
       - name: Checkout code
@@ -38,6 +46,7 @@ jobs:
         uses: github/codeql-action/init@1a7989f3955e0c69f0e0ccc14aee54a387a0fd31 # v3
         with:
           languages: ${{ matrix.language }}
+          build-mode: ${{ matrix.build-mode }}
           # If you wish to specify custom queries, you can do so here or in a config file.
           # By default, queries listed here will override any specified in a config file.
           # Prefix the list here with "+" to use these queries and those in the config file.
@@ -45,3 +54,5 @@ jobs:
 
       - name: Analysis
         uses: github/codeql-action/analyze@86b04fb0e47484f7282357688f21d5d0e32175fe # v3
+        with:
+          category: /language:${{ matrix.language }}
